--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "insights-frontend-starter-app",
+  "name": "find-it-fix-it",
   "version": "1.1.0",
   "private": false,
   "dependencies": {
@@ -112,6 +112,6 @@
     "verify": "npm-run-all build lint test"
   },
   "insights": {
-    "appname": "starter-app"
+    "appname": "find-it-fix-it"
   }
 }
